--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "jsx": "react-jsx", // React17, import jsx 없이 jsx 사용하기
+    "jsx": "react-jsx",
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
