--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@types/color-convert": "^2.0.0",
+    "@types/react-redux": "^7.1.24",
     "autoprefixer": "^8.6.5",
     "axios": "^0.27.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "redux": "^4.2.0",
     "sass": "^1.49.0"
   },
   "devDependencies": {
