[wepback] favicon 제거 [pacakge] author 추가

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/jihyunleeme/webpack.git"
   },
-  "author": "",
+  "author": "jihyun lee",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jihyunleeme/webpack/issues"
