--- a/package.json
+++ b/package.json
@@ -28,9 +28,6 @@
     "@types/color-convert": "^2.0.0",
     "@types/react-redux": "^7.1.24",
     "autoprefixer": "^8.6.5",
-    "axios": "^0.27.2",
-    "react": "^17.0.2",
-    "redux": "^4.2.0",
     "sass": "^1.49.0"
   },
   "devDependencies": {
@@ -40,8 +37,10 @@
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
     "@storybook/react": "^6.4.14",
-    "@types/react": "^17.0.38",
+    "@types/react": "^18.0.9",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.18",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-loader": "^8.2.3",
