--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.0",
     "sass": "^1.49.0"
   },
   "devDependencies": {
