--- a/.gitignore
+++ b/.gitignore
@@ -210,4 +210,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# vscode
+.vscode/*
+
 # End of https://www.toptal.com/developers/gitignore/api/react,node,macos,windows
+
