--- a/.gitattributes
+++ b/.gitattributes
@@ -3,11 +3,19 @@
 
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
-*.c text
-*.h text
+*.js text
+*.jsx text
+
+*.ts text
+*.tsx text
 
 # Declare files that will always have CRLF line endings on checkout.
-*.sln text eol=crlf
+*.js text eol=crlf
+*.jsx text eol=crlf
+
+*.ts text eol=crlf
+*.tsx text eol=crlf
+
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
