lint의 대상 ts파일에서 전체가 되도록 .ts확장자 제거

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.js",
     "start": "NODE_ENV=production webpack-dev-server --config webpack.prod.js",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
-    "lint": "eslint 'src/**/*.ts'",
+    "lint": "eslint 'src/**/*'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -64,3 +64,4 @@
     "webpack-merge": "^5.8.0"
   }
 }
+
